Change light and dark mode behaviour

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,29 +3,22 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
+    --foreground: #000;
+    --background: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
+        --foreground: #fff;
+        --background: #000;
     }
 }
 
 body {
     @apply selection:bg-slate-800 selection:text-slate-300;
     font-family: var(--font-mulish);
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    color: var(--foreground);
+    background: var(--background);
 }
 
 h1 {
@@ -50,16 +43,6 @@ h6 {
     font-weight: 700;
 }
 
-svg {
-    @apply fill-slate-200;
-    transition: 0.15s ease-in-out;
-}
-
-svg:hover {
-    @apply fill-slate-400;
-    cursor: pointer;
-}
-
 @media only screen and (max-width: 500px) {
     body {
         font-size: 0.9em;
@@ -75,7 +58,8 @@ svg:hover {
 }
 
 @keyframes wave-hand-animation {
-    0%, 100% {
+    0%,
+    100% {
         transform: rotate(0deg);
     }
     5% {
